==> kc4712/NRF52840/drivers/bma2x2_support.c <==
#include "bma2x2.h"
#include "stdio.h"
	#include "nrf_drv_twi.h"
#include "nrf_delay.h"
#include "define.h"

s32 bma2x2_data_readout_template(void)
{
	/*Local variables for reading accel x, y and z data*/
	//s16	v_accel_x_s16, v_accel_y_s16, v_accel_z_s16 = 0;

	/* bma2x2acc_data structure used to read accel xyz data*/
	struct bma2x2_accel_data sample_xyz;
	/* bma2x2acc_data_temp structure used to read accel xyz and temperature data*/
	//struct bma2x2_accel_data_temp sample_xyzt;
	/* Local variable used to assign the bandwidth value*/
	//u8 v_bw_value_u8 = 0;
	/* Local variable used to set the bandwidth value*/
	u8 banwid = 0;
	/* status of communication*/
	s32 com_rslt = ERROR;

/*********************** START INITIALIZATION ************************
  *	Based on the user need configure I2C or SPI interface.
  *	It is example code to explain how to use the bma2x2 API*/
	#ifdef BMA2x2_API
	I2C_routine();
	/*SPI_routine(); */
	#endif
	

 /*--------------------------------------------------------------------------*
 *  This function used to assign the value/reference of the following parameters
 *	I2C address
 *	Bus Write
 *	Bus read
 *	Chip id
 *-------------------------------------------------------------------------*/
	com_rslt = bma2x2_init(&bma2x2);

/*	For initialization it is required to set the mode of the sensor as "NORMAL"
 *	NORMAL mode is set from the register 0x11 and 0x12
 *	0x11 -> bit 5,6,7 -> set value as 0
 *	0x12 -> bit 5,6 -> set value as 0
 *	data acquisition/read/write is possible in this mode
 *	by using the below API able to set the power mode as NORMAL
 *	For the Normal/standby/Low power 2 mode Idle time of at least 2us(micro seconds)
 *	required for read/write operations*/
	/* Set the power mode as NORMAL*/
	com_rslt += bma2x2_set_power_mode(BMA2x2_MODE_NORMAL);
/*	Note:
	*	For the Suspend/Low power1 mode Idle time of at least 450us(micro seconds)
	*	required for read/write operations*/

/************************* END INITIALIZATION *************************/

/*------------------------------------------------------------------------*
************************* START GET and SET FUNCTIONS DATA ****************
*---------------------------------------------------------------------------*/
	/* This API used to Write the bandwidth of the sensor input 	value have to be given	bandwidth is set from the register 0x10 bits from 1 to 4*/
	//v_bw_value_u8 = 0x08;/* set bandwidth of 7.81Hz*/
	com_rslt += bma2x2_set_bw(BMA2x2_BW_125HZ);
	
	//규창 가속도 심박으로 인한 헤르쯔 변경 
	//com_rslt += bma2x2_set_bw(BMA2x2_BW_31_25HZ);

	bma2x2_set_range(BMA2x2_RANGE_4G);

	/* This API used to read back the written value of bandwidth*/
	com_rslt += bma2x2_get_bw(&banwid);

#ifdef GC_NRF52_DEV
		//bma2x2_set_intr_slope(BMA2x2_INTR1_SLOPE, INTR_ENABLE );
		//bma2x2_set_intr_enable(BMA2x2_SLOPE_Z_INTR, 1);
		//규창 전임자 더블탭 0x05 셋팅
		bma2x2_set_tap_thres(0x03); /* hkim 2016.11.2  low tap_th- previous value 0x0a) */
		/*
		TAP DURATION DEFINITION    
#define TAP_DURN_50_MS			0x00
#define TAP_DURN_100_MS			0x01
#define TAP_DURN_150_MS			0x02
#define TAP_DURN_200_MS			0x03
#define TAP_DURN_250_MS			0x04
#define TAP_DURN_375_MS			0x05
#define TAP_DURN_500_MS			0x06
#define TAP_DURN_700_MS			0x07
*/
		bma2x2_set_tap_durn(TAP_DURN_500_MS);
		//bma2x2_set_intr_single_tap(BMA2x2_INTR1_SINGLE_TAP, INTR_ENABLE);
	  //bma2x2_set_intr_enable(BMA2x2_SINGLE_TAP_INTR, 1);
		bma2x2_set_intr_double_tap(BMA2x2_INTR2_DOUBLE_TAP, INTR_ENABLE); 
		bma2x2_set_intr_enable(BMA2x2_DOUBLE_TAP_INTR, 1);
#else /* GC_NRF52_DEV */
	//bma2x2_set_intr_single_tap(BMA2x2_INTR1_SINGLE_TAP, INTR_ENABLE);
	//bma2x2_set_intr_slope(BMA2x2_INTR1_SLOPE, INTR_ENABLE );
	bma2x2_set_intr_double_tap(BMA2x2_INTR2_DOUBLE_TAP, INTR_ENABLE); 

	//bma2x2_set_intr_enable(BMA2x2_SINGLE_TAP_INTR, 1);
	//bma2x2_set_intr_enable(BMA2x2_SLOPE_Z_INTR, 1);
	//bma2x2_set_intr_enable(BMA2x2_SLOPE_Z_INTR, 1);
	bma2x2_set_intr_enable(BMA2x2_DOUBLE_TAP_INTR, 1);
#endif 
	
/*-----------------------------------------------------------------*
************************* END GET and SET FUNCTIONS ****************
*-------------------------------------------------------------------*/


/*------------------------------------------------------------------*
************************* START READ SENSOR DATA(X,Y and Z axis) ********
*---------------------------------------------------------------------*/
#if 0
	com_rslt += bma2x2_read_accel_x(&v_accel_x_s16);/* Read the accel X data*/
	printf("\r\nv_accel_x_s16 = %d",v_accel_x_s16  );

	com_rslt += bma2x2_read_accel_y(&v_accel_y_s16);/* Read the accel Y data*/
	printf("\r\nv_accel_y_s16 = %d",v_accel_y_s16  );

	com_rslt += bma2x2_read_accel_z(&v_accel_z_s16);/* Read the accel Z data*/
	printf("\r\nv_accel_z_s16 = %d",v_accel_z_s16  );

	/* accessing the bma2x2acc_data parameter by using sample_xyz*/
	com_rslt += bma2x2_read_accel_xyz(&sample_xyz);/* Read the accel XYZ data*/
	printf("\r\nsample_xyz = %d %d %d",sample_xyz.x , sample_xyz.y, sample_xyz.z );

	/* accessing the bma2x2acc_data_temp parameter by using sample_xyzt*/
	com_rslt += bma2x2_read_accel_xyzt(&sample_xyzt);/* Read the accel XYZT data*/
#else
		/* accessing the bma2x2acc_data parameter by using sample_xyz*/
		com_rslt += bma2x2_read_accel_xyz(&sample_xyz);/* Read the accel XYZ data*/
		//printf("\r\n sample_xyz = %d %d %d",sample_xyz.x , sample_xyz.y, sample_xyz.z );
#endif

/*--------------------------------------------------------------------*
************************* END READ SENSOR DATA(X,Y and Z axis) ************
*-------------------------------------------------------------------------*/
/*-----------------------------------------------------------------------*
************************* START DE-INITIALIZATION ***********************
*-------------------------------------------------------------------------*/
/*	For de-initialization it is required to set the mode of
 *	the sensor as "DEEP SUSPEND"
 *	DEEP SUSPEND mode is set from the register 0x11
 *	0x11 -> bit 5 -> set value as 1
 *	the device reaches the lowest power consumption only
 *	interface selection is kept alive
 *	No data acquisition is performed
 *	by using the below API able to set the power mode as DEEPSUSPEND*/
 /* Set the power mode as DEEPSUSPEND*/
	//com_rslt += bma2x2_set_power_mode(BMA2x2_MODE_DEEP_SUSPEND);
/*---------------------------------------------------------------------*
************************* END DE-INITIALIZATION **********************
*---------------------------------------------------------------------*/

return com_rslt;
}

s8 BMA2x2_I2C_bus_write(u8 dev_addr, u8 reg_addr, u8 *reg_data, u8 cnt)
{
	s32 iError = 0;
	u32 err_code=0;
	u8 array[I2C_BUFFER_LEN];
	u8 stringpos = 0;
	array[0] = reg_addr;
	
	for (stringpos = 0; stringpos < cnt; stringpos++) {
		array[stringpos + 1] = *(reg_data + stringpos);
	}
	/*
	* Please take the below function as your reference for
	* write the data using I2C communication
	* "IERROR = I2C_WRITE_STRING(DEV_ADDR, ARRAY, CNT+1)"
	* add your I2C write function here
	* iError is an return value of I2C read function
	* Please select your valid return value
	* In the driver SUCCESS defined as 0
    * and FAILURE defined as -1
	* Note :
	* This is a full duplex operation,
	* The first read data is discarded, for that extra write operation
	* have to be initiated. For that cnt+1 operation done in the I2C write string function
	* For more information please refer data sheet SPI communication:
	*/
#ifdef GC_NRF52_TWI
	err_code = nrf_drv_twi_tx(&m_twi_master_1, (dev_addr >> 1), array, cnt+1, true);
	if (err_code != NRF_SUCCESS)
	{
#ifndef _FIT_ETRI_TEST_ 
			printf("\n\rBMA255 TWI write error(error code %d)", err_code);
#endif
			iError = -1;
	}
#elif defined GC_NRF51_TWI 
	if(twi_master_transfer(dev_addr, array, cnt+1, TWI_ISSUE_STOP)==false)
	{
		printf("\n\rBMA2x2_I2C_bus_write error: i2c write");
		iError = -1;
	}
#else /* GC_NRF52_TWI */
#endif /* GC_NRF52_TWI */
	
	return (s8)iError;
}

s8 BMA2x2_I2C_bus_read(u8 dev_addr, u8 reg_addr, u8 *reg_data, u8 cnt)
{
	u32 err_code;
	s32 iError = 0;
	u8 array[I2C_BUFFER_LEN] = {0};
	u8 stringpos = 0;
	
	array[0] = reg_addr;
	
	/* Please take the below function as your reference
	 * for read the data using I2C communication add your I2C rad function here.
	 * "IERROR = I2C_WRITE_READ_STRING(DEV_ADDR, ARRAY, ARRAY, 1, CNT)"
	 * iError is an return value of SPI write function
	 * Please select your valid return value. In the driver SUCCESS defined as 0 and FAILURE defined as -1
	 */
#ifdef GC_NRF52_TWI
	/* send read command to BMA255 */
	err_code = nrf_drv_twi_tx(&m_twi_master_1,  (dev_addr >> 1), &array[0], 1, true);
	if (err_code != NRF_SUCCESS)
	{
#ifndef _FIT_ETRI_TEST_ 
			printf("\n\rBMA255 TWI write error(error code %d)", err_code);
#endif
			iError = -1;
	}
	
	/* get data */
	err_code = nrf_drv_twi_rx(&m_twi_master_1, (dev_addr >> 1), array, cnt);
	if (err_code != NRF_SUCCESS)
	{
			printf("\n\rBMA255 TWI read error(error code %d)", err_code);
			iError = -1;
	}
	//APP_ERROR_CHECK(err_code);
#elif defined GC_NRF51_TWI 
	if(twi_master_transfer(dev_addr, &array[0], 1, TWI_DONT_ISSUE_STOP)==false)
	{
		printf("\n\rBMA2x2_I2C_bus_read error : i2c write1");
		iError = -1;
	}
	if(twi_master_transfer(dev_addr+1, array, cnt, TWI_ISSUE_STOP)==false)
	{
		printf("\n\rBMA2x2_I2C_bus_read error : i2c read2");
		iError = -1;
	}
#else /* GC_NRF52_TWI */
#endif /* GC_NRF52_TWI */
	
	for (stringpos = 0; stringpos < cnt; stringpos++) {
		*(reg_data + stringpos) = array[stringpos];
	}
	return (s8)iError;
}
